[UPDATE]: some improvements were made in get user controller context
